--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ python:
   - 3.3
   - 3.4
   - 3.5
+addons:
+  postgresql: "9.5"
+before_install:
+  - psql -c 'create database working-days;' -U postgres
 install: "pip install -r requirements.txt"
 script:
   - python test.py
